tests/baselines/reference/inheritedStringIndexersFromDifferentBaseTypes2.errors.txt
tests/cases/compiler/inheritedStringIndexersFromDifferentBaseTypes2.ts(18,11): error TS2413: 'number' index type '{}' is not assignable to 'string' index type '{ a: any; }'.
  Property 'a' is missing in type '{}' but required in type '{ a: any; }'.


==== tests/cases/compiler/inheritedStringIndexersFromDifferentBaseTypes2.ts (1 errors) ====
    // indexer in B is a subtype of indexer in A
    interface A {
        [s: string]: {
            a;
        };
    }
    interface B {
        [s: number]: {
            a;
            b;
        };
    }
    interface C extends A, B { } // ok
    
    interface D {
        [s: number]: {};
    }
    interface E extends A, D { } // error
              ~
!!! error TS2413: 'number' index type '{}' is not assignable to 'string' index type '{ a: any; }'.
!!! error TS2413:   Property 'a' is missing in type '{}' but required in type '{ a: any; }'.
!!! related TS2728 tests/cases/compiler/inheritedStringIndexersFromDifferentBaseTypes2.ts:4:9: 'a' is declared here.
    
    interface F extends A, D {
        [s: number]: {
            a;
        };
    } // ok because we overrode D's number index signature